# espeech_gradio

./: .gitignore  AGENTS.md  README.md  pyproject.toml  test_gradio.py  test_width.py
batch/: example.yaml  example_lines.txt
refs/: achird.txt  enladus.txt  gacrux.txt  kore.txt  leda.txt  orus.txt  red.txt  sada.txt  schedar.txt  sulafat-short.txt  sulafat.txt
src/espeech/: __init__.py  __main__.py  config.py  main.py
src/espeech/domain/: __init__.py  batching.py  greeting.py  synthesis_params.py  text_processing.py
src/espeech/runtime/: __init__.py  compatibility.py  resources.py
src/espeech/services/: __init__.py  batch.py  batch_config.py  batch_runner.py  preview.py  synthesis.py
src/espeech/ui/: __init__.py  app.py  events.py  reference_presets.py  styles.py
tests/unit/: test_app_smoke.py  test_batch_config.py  test_batch_runner.py  test_batching.py  test_greeting.py  test_reference_presets.py  test_synthesis_params.py  test_text_processing.py  test_ui_styles.py
